src/objects/ZZWorkflowInstance__c.object
<CustomObject>
    <fields>
        <fullName>Current_Phases__c</fullName>
        <label>Current Phases</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <referenceTo>ZZWorkflowModel__c</referenceTo>
        <relationshipLabel>ZZWorkflowInstances</relationshipLabel>
        <relationshipName>ZZWorkflowInstances</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Parameter_Values__c</fullName>
        <description>parameter values</description>
        <inlineHelpText>Para Name followed by value in string, separated by &apos;,&apos;, eg: &apos;name=Owen,age=22&apos;</inlineHelpText>
        <label>Parameter Values</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parameters__c</fullName>
        <label>Parameters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aborted</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ZZPhaseInstance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ZZPhaseInstance</label>
        <referenceTo>ZZPhaseInstance__c</referenceTo>
        <relationshipLabel>ZZWorkflowInstances</relationshipLabel>
        <relationshipName>ZZWorkflowInstances</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ZZWorkflowInstance</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ZZWorkflowInstance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZZWorkflowInstances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>